Feat(Swagger): add document in controllers
